WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273362
Begin implementing provisional load failure handling with site isolation
https://bugs.webkit.org/show_bug.cgi?id=273362
Summary
Begin implementing provisional load failure handling with site isolation
Alex Christensen
Reported
2024-04-27 15:37:07 PDT
rdar://121240941
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-27 15:37:16 PDT
<
rdar://problem/127177756
>
Alex Christensen
Comment 2
2024-04-27 15:38:23 PDT
I accidentally originally classified this as security. That was a typo.
Alex Christensen
Comment 3
2024-04-27 15:43:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27840
EWS
Comment 4
2024-04-29 07:20:29 PDT
Committed
278106@main
(e39325860246): <
https://commits.webkit.org/278106@main
> Reviewed commits have been landed. Closing PR #27840 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug