Begin implementing provisional load failure handling with site isolation https://bugs.webkit.org/show_bug.cgi?id=273362 rdar://127177756

Reviewed by Charlie Wolfe.

When a provisional load fails, some additional bookkeeping is needed to have all the processes
have local and remote frames in the right state.  I renamed didCommitLoadInAnotherProcess to
transitionFrameToRemote to be symmetric with transitionFrameToLocal and because it is used in
more cases than just during a load commit now.  Now it's used in a provisional load failure, too.

* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::transitionProvisionalPageToRemotePage):
* Source/WebKit/UIProcess/BrowsingContextGroup.h:
* Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::~ProvisionalPageProxy):
(WebKit::ProvisionalPageProxy::didFailProvisionalLoadForFrame):
(WebKit::ProvisionalPageProxy::didCommitLoadForFrame):
* Source/WebKit/UIProcess/ProvisionalPageProxy.h:
(WebKit::ProvisionalPageProxy::messageReceiverRegistration):
* Source/WebKit/UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::commitProvisionalFrame):
* Source/WebKit/WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::transitionToRemote):
(WebKit::WebFrame::didCommitLoadInAnotherProcess): Deleted.
* Source/WebKit/WebProcess/WebPage/WebFrame.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::transitionFrameToLocal):
(WebKit::WebPage::transitionFrameToRemote):
(WebKit::WebPage::didCommitLoadInAnotherProcess): Deleted.
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, NavigateOpenerToProvisionalNavigationFailure)):

Canonical link: https://commits.webkit.org/278106@main